--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -6,3 +6,78 @@
 	word-wrap: break-word;
 	background-color: inherit;
 }
+
+.nav-side {
+    position: fixed;
+    right:0;
+    top: 0px;
+    height:100%;
+    width: 100%;
+    max-width: 350px;
+    background-color: #8d322c;
+    box-sizing: border-box;
+    passing: 20px;
+    color: white;
+    margin-right: -350px;
+    transition: margin 250ms ease-in-out;
+}
+
+.annotation-list {
+    height: 100%;
+    overflow-y: auto;
+}
+
+.annotation-list a {
+    color: inherit;
+    text-decoration: none;
+}
+
+.nav-side h2 {
+    text-align: center;
+}
+
+.nav-side.nav-open {
+    margin-right: 0;
+}
+
+.nav-toggle {
+    position: absolute;
+    left: -40px;
+    top: 50%;
+    width: 40px;
+    height: 40px;
+    background-color: #8d322c;
+    line-height: 40px;
+    text-decoration: none;
+    text-align: center;
+    border-bottom-left-radius: 3px;
+}
+
+.nav-toggle:before {
+    content: "\2190";
+    font-weight:bold;
+    font-size: large;
+    color:white;
+}
+
+a.nav-toggle {
+    text-decoration: none;
+}
+
+.nav-side.nav-open .nav-toggle:before {
+    content: "\2192";
+}
+
+.nav-side .annotation {
+    margin-left: 5px;
+    margin-right: 5px;
+}
+
+.nav-side .annotation .text {
+    text-align: left;   
+}
+
+.nav-side .annotation .username {
+    text-align: right;
+    font-style: italic;
+}
