--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -51,6 +51,7 @@
     text-decoration: none;
     text-align: center;
     border-bottom-left-radius: 3px;
+    border-top-left-radius: 3px;
 }
 
 .nav-toggle:before {
@@ -69,8 +70,8 @@ a.nav-toggle {
 }
 
 .nav-side .annotation {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 7px;
+    margin-right: 7px;
 }
 
 .nav-side .annotation .text {
