Sidebar now highlights and scrolls to the relevant annotation

--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -3,8 +3,17 @@
 	font-size: inherit;
 	font-style: inherit;
 	font-weight: inherit;
-	word-wrap: break-word;
+	word-wrap: normal;
+    word-break: inherit;
 	background-color: inherit;
+}
+
+pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap: break-word;
 }
 
 .nav-side {
