Initial text group annotation support

--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -96,4 +96,5 @@ a.nav-toggle {
     -webkit-column-width: 120px;
     -moz-column-width: 120px;
     column-width: 120px;
+    list-style-type: circle;
 }
