Work on comment front-end

--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -103,3 +103,12 @@ a.nav-toggle {
 .annotatable {
     width: 100%;
 }
+
+/* Comments are hidden on load. Shown when clicked on. */
+.comments {
+    display: none;
+}
+
+.annotation-comment-icon {
+    margin-left: 5px;
+}
