Displays comments in side bar. Buggy -> ensure post signals are sent in correct order. Add delete buttons (for comments & annotations). Add comment counter.

--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -104,11 +104,15 @@ a.nav-toggle {
     width: 100%;
 }
 
-/* Comments are hidden on load. Shown when clicked on. */
-.comments {
-    display: none;
-}
 
 .annotation-comment-icon {
     margin-left: 5px;
+}
+
+.comment-box {
+    width: 75%;
+}
+
+.comment-count {
+    text-align: center;
 }
