Begining of filtering support. Added text fields

--- a/annotation/styles/main.css
+++ b/annotation/styles/main.css
@@ -171,3 +171,12 @@ a.nav-toggle {
     height: auto;
     padding-bottom: 4px;
 }
+
+.filter-item {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.filter-label {
+    font-weight: bold;
+}
